trying explicit load, if that is the xesmf issue

--- a/master_run.ipynb
+++ b/master_run.ipynb
@@ -112,29 +112,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:  (lat: 38, lon: 81, time: 7306)\n",
+       "Dimensions:    (bnds: 2, lat: 19, lon: 35, run: 50, time: 240)\n",
        "Coordinates:\n",
-       "  * lon      (lon) float32 235.0 235.75 236.5 237.25 ... 293.5 294.25 295.0\n",
-       "  * lat      (lat) float32 50.75 50.0 49.25 48.5 47.75 ... 25.25 24.5 23.75 23.0\n",
-       "  * time     (time) datetime64[ns] 1980-01-01 1980-01-02 ... 2000-01-01\n",
+       "  * time       (time) datetime64[ns] 1980-01-16T12:00:00 ... 1999-12-16T12:00:00\n",
+       "  * lat        (lat) float64 21.45 23.32 25.18 27.05 ... 49.43 51.29 53.16 55.02\n",
+       "  * lon        (lon) float64 232.5 234.4 236.2 238.1 ... 290.6 292.5 294.4 296.2\n",
+       "    height     float64 2.0\n",
+       "Dimensions without coordinates: bnds, run\n",
        "Data variables:\n",
-       "    tas      (time, lat, lon) float32 273.48187 271.2928 ... 297.90112 297.88562"
+       "    time_bnds  (time, bnds) datetime64[ns] 1980-01-01 1980-02-01 ... 2000-01-01\n",
+       "    lat_bnds   (lat, bnds) float64 20.52 22.38 22.38 24.25 ... 54.09 54.09 55.96\n",
+       "    lon_bnds   (lon, bnds) float64 231.6 233.4 233.4 235.3 ... 295.3 295.3 297.2\n",
+       "    tas        (run, time, lat, lon) float32 292.5981 292.33444 ... 259.5802\n",
+       "Attributes:\n",
+       "    institution:               Max-Planck-Institut fuer Meteorologie\n",
+       "    institute_id:              MPI-M\n",
+       "    experiment_id:             historical\n",
+       "    source:                    MPI-ESM 1.1.00p2\n",
+       "    model_id:                  MPI-ESM\n",
+       "    forcing:                   N/A\n",
+       "    parent_experiment_id:      piControl\n",
+       "    parent_experiment_rip:     r1i1p1\n",
+       "    branch_time:               0.0\n",
+       "    contact:                   michael.botzet@mpimet.mpg.de\n",
+       "    references:                Maher etal 2018\n",
+       "    initialization_method:     1850\n",
+       "    physics_version:           3\n",
+       "    tracking_id:               15d06cf5-9b07-4811-83a3-559267a9e7fd\n",
+       "    product:                   output\n",
+       "    experiment:                historical\n",
+       "    frequency:                 mon\n",
+       "    creation_date:             2018-08-22T21:17:57Z\n",
+       "    history:                   Fri Nov 29 12:53:08 2019: ncecat data/tas_Amon...\n",
+       "    Conventions:               CF-1.4\n",
+       "    project_id:                CMIP5\n",
+       "    table_id:                  Table Amon (17 July 2013) 97d3bd8711883aca8d9e...\n",
+       "    title:                     MPI-ESM model output prepared for CMIP5 histor...\n",
+       "    parent_experiment:         pre-industrial control\n",
+       "    modeling_realm:            atmos\n",
+       "    realization:               1\n",
+       "    cmor_version:              2.9.1\n",
+       "    NCO:                       4.7.3\n",
+       "    nco_openmp_thread_number:  1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_era_hist"
+    "data_era_hist.load()\n",
+    "data_mpi_hist.load()"
    ]
   },
   {
