added workaround file + some edits

--- a/master_run.ipynb
+++ b/master_run.ipynb
@@ -144,13 +144,13 @@
     }
    ],
    "source": [
-    "# Regrid to MPI grid\n",
+    "# Build regridder to MPI grid\n",
     "regridder = xe.Regridder(data_era_hist,data_mpi_hist,'bilinear')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,25 @@
     }
    ],
    "source": [
-    "data_era_hist_rg = regridder(data_era_hist)"
+    "# Regrid to MPI grid; with the exception to deal with the \n",
+    "# (still unresolved) binder-xesmf issue - in this case a \n",
+    "# regridded version of the dataset is loaded from file (this \n",
+    "# backup was created offline, where the issue is not present)\n",
+    "try:\n",
+    "    data_era_hist_rg = regridder(data_era_hist)\n",
+    "    1/0\n",
+    "except: \n",
+    "    data_era_hist_rg = xr.open_dataset(\"data/data_era_hist_rg_regridderworkaround.nc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saved to allow workaround above\n",
+    "#data_era_hist_rg.to_netcdf('data/data_era_hist_rg_regridderworkaround.nc')"
    ]
   },
   {
@@ -635,13 +653,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Changes in mortality... and the standard deviation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -650,13 +661,6 @@
     "# Set mask for the United States\n",
     "mask = regionmask.defined_regions.natural_earth.countries_110.mask(dbins,wrap_lon=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -701,11 +705,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The figure above shows changes in number of bin-days per year between the two time periods and the historical period (mean across all 50 projections and across the continental United States. This is a geographic mean, and does not weight by population). In line with preivous work, climate change results in an increase in hot days at the expense of cold days, with the largest increase being in the number of days in the 80-90$^\\circ$ bin. "
+   ]
   },
   {
    "cell_type": "code",
@@ -760,11 +764,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "An example of changes in mortality rate based on 25 of the 50 created projections (analogous to the change in climatology figure for the same 25 runs, above). Changes in mortality rates seem consistent across runs, with some discrepancies in the upper midwest and as different magnitudes in Texas. "
+   ]
   },
   {
    "cell_type": "code",
@@ -859,7 +863,13 @@
    "metadata": {},
    "source": [
     "# Conclusions\n",
-    "From the final figure above, internal model variability in future projections of mortality changes may be relatively large in certain areas of the United States with small changes even in end-of-century, but not generally in areas with large changes in mortality. "
+    "From the final figure above, internal model variability in future projections of mortality changes may be relatively large in certain areas of the United States with small changes even in end-of-century, but are generally relatively small in areas of large projected mortality changes. By end-of-century, few pixels remain where the variability is close to the mean in magnitude. \n",
+    "\n",
+    "In other words, in this back-of-the-envelope calculation using a simple climate-mortality relationship (and ignoring adaptation, migration, technological changes, etc.), internal model variability seems to play a possible role in determining the sign of the signal in areas with small changes in mid-century, but become irrelevant across most of the continental United States by the end of the century.\n",
+    "\n",
+    "Though no explicit modeling of inter-model or scenario uncertainty for comparison has been made in this project, this finding is in line with the Hawkins and Sutton conclusion for the climate variables underlying this study - while internal model variability may play a significant role in early- to mid-century projections, by end-of-century its impact may be limited. \n",
+    "\n",
+    "This conclusion cannot necessarily be generalized to many variables relevant to human impacts. Agricultural damage functions, for example, frequently involve thresholds or non-linearities much more striking than those found in heat-mortality studies. Since changes in variability have an outsized impact on threshold-defined extremes (see e.g. [Katz and Brown (1992)](https://link.springer.com/article/10.1007/BF00139728)), further study on a wider range of common damage functions should be undertaken. "
    ]
   },
   {
